Bug 565072 - PoolObject::getLegalDefaultValue looks in wrong list for CONSTANT_UInt (r=wsharp)